@@ -70,7 +70,7 @@ impl Dialer
 	///
 	/// Dialers are implicitly closed when the socket they are associated with
 	/// is closed. Dialers are _not_ closed when all handles are dropped.
-	pub fn close(self)
+	pub fn close(&self)
 	{
 		// Closing the dialer should only ever result in success or ECLOSED and
 		// both of those mean that the drop was successful.
